--- a/my-react-app1/src/App.css
+++ b/my-react-app1/src/App.css
@@ -1,20 +1,31 @@
-*{
-    margin: 0;
+* {
     padding: 0;
-    box-sizing: border-box;
+    margin: 0;
 }
-body {
-    background-color: #ccc;
+.wrap {
+    width: 1200px;
+    margin: 50px auto;
+}
+
+.container {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    font-family: sans-serif;
+    flex-wrap: wrap;/* 自動換行 */
+    justify-content: space-between;
 }
-.city {
+.item {
+    border: 1px solid #ccc;
+    width: 550px;
+    border-radius: 10px;
+    text-align: center;
+}
+.item h3 {
     background-color: #ccc;
+    border-radius: 10px 10px 0 0;
+    border-bottom: 1px solid #ccc;
+    padding: 10px 0;
 }
-.weather {
+.content {
     display: flex;
-    justify-items: center;
-    border-color: black
+    justify-content: space-between;
+    padding: 10px 0;
 }
